# mcim-salesforce-ai-bridge

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: exceptions.py  main.py
src/ai/: io.py  mockservice.py
src/models/: schemas.py
src/salesforce/: salesforce.py
tests/: test_mock_service.py
